--- a/Vue/package.json
+++ b/Vue/package.json
@@ -8,13 +8,14 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
-        "chart.js": "3.3.2",
+        "axios": "^1.7.2",
+        "chart.js": "^4.1.1",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "3.49.1",
         "vue": "^3.2.41",
-        "vue-router": "^4.1.5",
-        "axios": "^1.7.2"
+        "vue-chartjs": "^5.3.1",
+        "vue-router": "^4.1.5"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
