--- a/Vue/package.json
+++ b/Vue/package.json
@@ -8,18 +8,19 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
-        "axios": "^1.7.2",
+        "axios": "^1.7.3",
         "chart.js": "^4.1.1",
+        "jwt-decode": "^4.0.0",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "3.49.1",
         "vue": "^3.2.41",
         "vue-chartjs": "^5.3.1",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.4.3"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
-        "@types/node": "^20.14.12",
+        "@types/node": "^20.14.14",
         "@types/vue": "^1.0.31",
         "@vitejs/plugin-vue": "^4.1.0",
         "@vue/eslint-config-prettier": "^7.0.0",
